==> MoseychukA/FLARM_ALL/ARHIV/MAIN_NEW/Arhiv/Исходник/FlyRf24_06_08_03/CC13XX.cpp <==
#include <Wire.h>
#include <ti/drivers/Power.h>
#include <ti/drivers/Watchdog.h>
#include <xdc/runtime/Memory.h>
#include "SoC.h"
#include "RF.h"
#include "LED.h"
#include "Sound.h"
#include "OLED.h"
#include "Baro.h"
#include "BatteryRF.h"
#include "data/NMEA.h"
#include "GDL90.h"
#include "D1090.h"
#include "EasyLink.h"
#include <ti/devices/cc13x0/driverlib/sys_ctrl.h>
#include <ti/devices/cc13x0/driverlib/aon_batmon.h>
#include <SCSerial.h>
#include <ti/devices/cc13x2_cc26x2/driverlib/sys_ctrl.h>
#include <ti/devices/cc13x2_cc26x2/driverlib/aon_batmon.h>
#include <SPIFlash.h>
#include <ADXL362.h>

static void CC13XX_setup()
{
  uint32_t reset_source = SysCtrlResetSourceGet();

  switch (reset_source)
  {
    case RSTSRC_PIN_RESET:
      reset_info.reason = REASON_EXT_SYS_RST; break;
    case RSTSRC_VDDS_LOSS:
      reset_info.reason = REASON_WDT_RST; break;
    case RSTSRC_VDDR_LOSS:
      reset_info.reason = REASON_WDT_RST; break;
    case RSTSRC_CLK_LOSS:
      reset_info.reason = REASON_WDT_RST; break;
    case RSTSRC_SYSRESET:
      reset_info.reason = REASON_SOFT_RESTART; break;
    case RSTSRC_WARMRESET:
      reset_info.reason = REASON_SOFT_RESTART; break;
    case RSTSRC_WAKEUP_FROM_SHUTDOWN:
      reset_info.reason = REASON_DEEP_SLEEP_AWAKE; break;
#if defined(ENERGIA_ARCH_CC13X2)
    case RSTSRC_WAKEUP_FROM_TCK_NOISE:
      reset_info.reason = REASON_DEEP_SLEEP_AWAKE; break;
#endif /* ENERGIA_ARCH_CC13X2 */
    case RSTSRC_PWR_ON:
    default:
      reset_info.reason = REASON_DEFAULT_RST; break;
  }

  EasyLink_getIeeeAddr(ieeeAddr);

#if defined(ENERGIA_ARCH_CC13X2)

  bool has_spiflash = false;
  uint16_t flash_id = 0;

  has_spiflash = flash.initialize();

  if (has_spiflash) {
    flash_id = flash.readDeviceId();
    flash.sleep();
  }
  flash.end();

  short CC13XX_has_accel = adxl.init();

  if (CC13XX_has_accel == true) {
    adxl.activateStandbyMode();
  }
  SPI.end(SOC_GPIO_PIN_ADXL_SS);

  if (has_spiflash && flash_id == MACRONIX_MX25R8035F) {

    hw_info.model = SOFTRF_MODEL_UNI;

    if (CC13XX_has_accel == true) {
      cc13xx_board = TI_LPSTK_CC1352R;
      hw_info.imu  = ACC_ADXL362;
    } else {
      cc13xx_board = TI_CC1352R1_LAUNCHXL;
    }
  } else {
    cc13xx_board  = SOFTRF_UAT_MODULE_20;
  }

  if (SOC_GPIO_PIN_GNSS_PPS != SOC_UNUSED_PIN) {
    uint8_t pps_led = (cc13xx_board == TI_LPSTK_CC1352R ? SOC_GPIO_PIN_LED_BLUE : RED_LED);

    pinMode(pps_led, OUTPUT);
    /* Indicate GNSS PPS signal */
    digitalWrite(pps_led, LOW);
  }
#endif /* ENERGIA_ARCH_CC13X2 */

#if defined(USE_OLED)
  uint8_t txBuffer[2] = { 0x00 };
  uint8_t rxBuffer[6] = { 0x00 };

  I2C_Handle i2c;
  I2C_Params i2cParams;
  I2C_Transaction i2cTransaction;

  I2C_init();
  I2C_Params_init(&i2cParams);
  i2cParams.bitRate = I2C_400kHz;
  i2c = I2C_open(Board_I2C, &i2cParams);

  if (i2c != NULL) {
    i2cTransaction.writeBuf = txBuffer;
    i2cTransaction.readBuf = rxBuffer;
    i2cTransaction.writeCount = 1;
    i2cTransaction.readCount = 0;

    i2cTransaction.slaveAddress = SSD1306_OLED_I2C_ADDR;
    txBuffer[0] = 0x00;

    CC13XX_has_OLED = I2C_transfer(i2c, &i2cTransaction);

    I2C_close(i2c);
  }
#endif /* USE_OLED */

  hw_info.revision = cc13xx_board;

  Serial.begin(SERIAL_OUT_BR, SERIAL_OUT_BITS);
}

static void CC13XX_post_init()
{
  Serial.println();
  Serial.print(F("SoftRF "));
  Serial.print(hw_info.model == SOFTRF_MODEL_UNI ? F("Uni") : F("UAT"));
  Serial.println(F(" Edition Power-on Self Test"));
  Serial.println();
  Serial.flush();

  Serial.println(F("Components:"));

  Serial.print(F("RADIO   : "));
  Serial.println(hw_info.rf      == RF_IC_CC13XX      ? F("PASS") : F("FAIL"));
  Serial.print(F("GNSS    : "));
  Serial.println(hw_info.gnss    != GNSS_MODULE_NONE  ? F("PASS") : F("N/A"));
  Serial.print(F("BARO    : "));
  Serial.println(hw_info.baro    != BARO_MODULE_NONE  ? F("PASS") : F("N/A"));
#if defined(USE_OLED)
  Serial.print(F("DISPLAY : "));
  Serial.println(hw_info.display != DISPLAY_NONE      ? F("PASS") : F("N/A"));
#endif /* USE_OLED */

  Serial.println();
  Serial.println(F("Power-on Self Test is complete."));
  Serial.println();
  Serial.flush();

  Serial.println(F("Data output device(s):"));

  Serial.print(F("NMEA   - "));
  switch (settings->nmea_out)
  {
    case NMEA_UART       :  Serial.println(F("UART"));    break;
    case NMEA_OFF        :
    default              :  Serial.println(F("NULL"));    break;
  }

  Serial.print(F("GDL90  - "));
  switch (settings->gdl90)
  {
    case GDL90_UART      :  Serial.println(F("UART"));    break;
    case GDL90_OFF       :
    default              :  Serial.println(F("NULL"));    break;
  }

  Serial.print(F("D1090  - "));
  switch (settings->d1090)
  {
    case D1090_UART      :  Serial.println(F("UART"));    break;
    case D1090_OFF       :
    default              :  Serial.println(F("NULL"));    break;
  }

  Serial.println();
  Serial.flush();

#if defined(USE_OLED)
  OLED_info1();
#endif /* USE_OLED */

#if defined(ENERGIA_ARCH_CC13X2) && !defined(EXCLUDE_IMU)
  if (hw_info.imu == ACC_ADXL362) {
    adxl.init();
    adxl.activateMeasure(ad_bandwidth_hz_25, ad_range_4G, ad_noise_normal);
    IMU_Time_Marker = millis();
  }
#endif /* EXCLUDE_IMU */
}

static void CC13XX_loop()
{
#if defined(ENERGIA_ARCH_CC13X2)

  if (cc13xx_watchdogHandle) {
    // Reload the watchdog
    Watchdog_clear(cc13xx_watchdogHandle);
  }

  uint8_t pps_led = (cc13xx_board == TI_LPSTK_CC1352R ? SOC_GPIO_PIN_LED_BLUE : RED_LED);
  if ((SOC_GPIO_PIN_GNSS_PPS != SOC_UNUSED_PIN) &&
      (millis() - PPS_TimeMarker) < 100) {
    digitalWrite(pps_led, HIGH);
  } else {
    digitalWrite(pps_led, LOW);
  }

#if !defined(EXCLUDE_IMU)
  if (hw_info.imu == ACC_ADXL362 &&
      (millis() - IMU_Time_Marker) > IMU_UPDATE_INTERVAL) {
    MeasurementInMg m = adxl.getXYZLowPower(ad_range_4G);

    int32_t x32 = (int32_t) m.x;
    int32_t y32 = (int32_t) m.y;
    int32_t z32 = (int32_t) m.z;

    IMU_g_x10 = (int) (sqrtf((float) (x32 * x32 + y32 * y32 + z32 * z32)) / 100);

    IMU_Time_Marker = millis();
  }
#endif /* EXCLUDE_IMU */
#endif /* ENERGIA_ARCH_CC13X2 */
}

static void CC13XX_fini(int reason)
{
  // Disable battery monitoring
  AONBatMonDisable();

#if defined(ENERGIA_ARCH_CC13X2)

  if (SOC_GPIO_PIN_STATUS != SOC_UNUSED_PIN) {
    digitalWrite(SOC_GPIO_PIN_STATUS, LOW);
    pinMode(SOC_GPIO_PIN_STATUS, INPUT);
  }

  if ((SOC_GPIO_PIN_GNSS_PPS != SOC_UNUSED_PIN)) {
    uint8_t pps_led = (cc13xx_board == TI_LPSTK_CC1352R ? SOC_GPIO_PIN_LED_BLUE : RED_LED);
    digitalWrite(pps_led, LOW);
    pinMode(pps_led, INPUT);
  }

#if !defined(EXCLUDE_IMU)
  if (hw_info.imu == ACC_ADXL362) {
    adxl.activateStandbyMode();
    SPI.end(SOC_GPIO_PIN_ADXL_SS);
  }
#endif /* EXCLUDE_IMU */
#endif /* ENERGIA_ARCH_CC13X2 */

#if defined(USE_SERIAL_DEEP_SLEEP)
  Serial.end();

  /* Configure DIO for wake up from shutdown */
  PINCC26XX_setWakeup(UART0_TableWakeUp);
#endif

  Power_shutdown(0, 0);
}

static void CC13XX_reset()
{
  SysCtrlSystemReset();
}

static uint32_t CC13XX_getChipId()
{
  uint32_t id = (uint32_t) ieeeAddr[7]        | ((uint32_t) ieeeAddr[6] << 8) | \
               ((uint32_t) ieeeAddr[5] << 16) | ((uint32_t) ieeeAddr[4] << 24);

  return DevID_Mapper(id);
}

static uint32_t CC13XX_getFreeHeap()
{
  Memory_Stats memStat;

  Memory_getStats(NULL, &memStat);

  return memStat.totalFreeSize;
}

static void CC13XX_EEPROM_extension(int cmd)
{
  if (cmd == EEPROM_EXT_LOAD) {
    if (settings->mode != SOFTRF_MODE_NORMAL
#if !defined(EXCLUDE_TEST_MODE)
        &&
        settings->mode != SOFTRF_MODE_TXRX_TEST1
#endif /* EXCLUDE_TEST_MODE */
        ) {
      settings->mode = SOFTRF_MODE_NORMAL;
    }

    if (settings->nmea_out != NMEA_OFF) {
      settings->nmea_out = NMEA_UART;
    }
    if (settings->gdl90 != GDL90_OFF) {
      settings->gdl90 = GDL90_UART;
    }
    if (settings->d1090 != D1090_OFF) {
      settings->d1090 = D1090_UART;
    }

    /* AUTO and UK RF bands are deprecated since Release v1.3 */
    if (settings->band == RF_BAND_AUTO || settings->band == RF_BAND_UK) {
      settings->band = RF_BAND_EU;
    }
  }
}

static float CC13XX_Battery_param(uint8_t param)
{
  float rval;

  switch (param)
  {
  case BATTERY_PARAM_THRESHOLD:
    rval = hw_info.model == SOFTRF_MODEL_UNI ? BATTERY_THRESHOLD_NIZNX2 :
                                               BATTERY_THRESHOLD_NIMHX2;
    break;

  case BATTERY_PARAM_CUTOFF:
    rval = hw_info.model == SOFTRF_MODEL_UNI ? BATTERY_CUTOFF_NIZNX2 :
                                               BATTERY_CUTOFF_NIMHX2;
    break;

  case BATTERY_PARAM_CHARGE:

    /* TBD */

    rval = 100;
    break;

  case BATTERY_PARAM_VOLTAGE:
  default:

    if (AONBatMonNewBatteryMeasureReady()) {
      // Get the VDDS voltage
      cc13xx_vdd = AONBatMonBatteryVoltageGet();
    }

    rval = ((cc13xx_vdd >> 8) & 0x7) + (float) (cc13xx_vdd & 0xFF) / 256.0;
    break;
  }

  return rval;
}

static void CC13XX_WDT_setup()
{
#if defined(ENERGIA_ARCH_CC13X2)
  Watchdog_Params params;
  uint32_t        reloadValue;

  Watchdog_init();

  /* Open a Watchdog driver instance */
  Watchdog_Params_init(&params);
  params.callbackFxn = (Watchdog_Callback) NULL;
  params.debugStallMode = Watchdog_DEBUG_STALL_ON;
  params.resetMode = Watchdog_RESET_ON;

  cc13xx_watchdogHandle = Watchdog_open(Board_WATCHDOG, &params);
  if (cc13xx_watchdogHandle) {
    /*
     * The watchdog reload value is initialized during the
     * Watchdog_open() call. The reload value can also be
     * set dynamically during runtime.
     *
     * Converts TIMEOUT_MS to watchdog clock ticks.
     * This API is not applicable for all devices.
     * See the device specific watchdog driver documentation
     * for your device.
     */
    reloadValue = Watchdog_convertMsToTicks(cc13xx_watchdogHandle, WD_TIMEOUT_MS);
  
    /*
     * A value of zero (0) indicates the converted value exceeds 32 bits
     * OR that the API is not applicable for this specific device.
     */
    if (reloadValue != 0) {
        Watchdog_setReload(cc13xx_watchdogHandle, reloadValue);
    }
  }
#endif /* ENERGIA_ARCH_CC13X2 */
}

static void CC13XX_WDT_fini()
{
#if defined(ENERGIA_ARCH_CC13X2)
  if (cc13xx_watchdogHandle) {
    Watchdog_close(cc13xx_watchdogHandle);
  }
#endif /* ENERGIA_ARCH_CC13X2 */
}

static void CC13XX_Button_setup()
{
#if defined(ENERGIA_ARCH_CC13X2)
  pinMode(PUSH1, INPUT_PULLUP);

  BootManagerCheck();
#endif /* ENERGIA_ARCH_CC13X2 */

#if SOC_GPIO_PIN_BUTTON != SOC_UNUSED_PIN
  int button_pin = SOC_GPIO_PIN_BUTTON;

  // Button(s) uses external pull up resistor.
  pinMode(button_pin, INPUT_PULLUP);

  button_1.init(button_pin);

  // Configure the ButtonConfig with the event handler, and enable all higher
  // level events.
  ButtonConfig* PageButtonConfig = button_1.getButtonConfig();
  PageButtonConfig->setEventHandler(handleEvent);
  PageButtonConfig->setFeature(ButtonConfig::kFeatureClick);
  PageButtonConfig->setFeature(ButtonConfig::kFeatureLongPress);
  PageButtonConfig->setFeature(ButtonConfig::kFeatureSuppressAfterClick);
//  PageButtonConfig->setDebounceDelay(15);
  PageButtonConfig->setClickDelay(600);
  PageButtonConfig->setLongPressDelay(2000);

#endif /* SOC_GPIO_PIN_BUTTON != SOC_UNUSED_PIN */
}

static void CC13XX_Button_loop()
{
#if defined(ENERGIA_ARCH_CC13X2)

#if 0
  if (digitalRead(PUSH1) == LOW) {
    Serial.println(F("PUSH1 PRESSED"));
    Serial.flush();
  }
#endif
#endif /* ENERGIA_ARCH_CC13X2 */

#if SOC_GPIO_PIN_BUTTON != SOC_UNUSED_PIN
  button_1.check();
#endif /* SOC_GPIO_PIN_BUTTON != SOC_UNUSED_PIN */
}

static void CC13XX_Button_fini()
{
#if defined(ENERGIA_ARCH_CC13X2)
  pinMode(PUSH1, INPUT);
#endif /* ENERGIA_ARCH_CC13X2 */

#if SOC_GPIO_PIN_BUTTON != SOC_UNUSED_PIN
  pinMode(SOC_GPIO_PIN_BUTTON, INPUT);
#endif /* SOC_GPIO_PIN_BUTTON != SOC_UNUSED_PIN */
}
